--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,9 +15,10 @@
 					{{#unless this.devoured}}
 						<li>
 							{{this.id }}.  {{this.burger_name}}
+
 							<form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
 								<input type="hidden" name="devoured" value="true">
-								<button type="submit">DEVOUR!</button>
+								<button class="btn btn-info" type="submit">DEVOUR!</button>
 							</form>
 						</li>
 					{{/unless}}
@@ -29,9 +30,9 @@
 			<form class="create-update-form" action="burgers/create" method="POST">
 				<div class="form-group">
 					<label for="bu">Burger Name:</label>
-					<input type="text" id="bu" name="name">
+					<input type="text" id="bu" name="burger_name">
 				</div>
-				<button type="submit">Add Burger</button>
+				<button class="btn btn-info" type="submit">Add Burger</button>
 			</form>
 		</div>
 		<div class="col-md-4" id="rght">
@@ -40,7 +41,7 @@
 				{{#each burgers}}
 					{{#if this.devoured}}
 						<li>
-							{{this.name}}
+							{{this.id }}.  {{this.burger_name}}
 						</li>
 					{{/if}}
 				{{/each}}
