--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<br>
 			<h1>Have a Burger!!</h1>
-			<img src="assets/img/burger.jpg">
+			<img src="assets/img/burger.png">
 			<hr>
 		</div>
 	</div>
